--- a/packages/components/src/List/ListItem.css
+++ b/packages/components/src/List/ListItem.css
@@ -23,7 +23,7 @@
 .hoverable:hover,
 .hoverable:focus {
   outline: none;
-  background-color: var(--color-yellow--lightest);
+  background-color: var(--color-surface--hover);
 }
 
 .icon {
