--- a/packages/components/src/Banner/notificationTypes.css
+++ b/packages/components/src/Banner/notificationTypes.css
@@ -1,19 +1,17 @@
 .notice {
-  border-color: var(--color-lightBlue);
-  background-color: var(--color-lightBlue--lightest);
+  background-color: var(--color-informative--surface);
 }
 
+/* Our Banner "surface" colors should be lighter than they are so we're leaving the following alone for now */
+
 .success {
-  border-color: var(--color-green);
   background-color: var(--color-green--lighter);
 }
 
 .warning {
-  border-color: var(--color-yellow);
   background-color: var(--color-yellow--lighter);
 }
 
 .error {
-  border-color: var(--color-red);
   background-color: var(--color-red--lighter);
 }
