--- a/packages/components/src/List/SectionHeader.css
+++ b/packages/components/src/List/SectionHeader.css
@@ -3,7 +3,7 @@
   top: 0;
   padding: var(--space-small) var(--space-base);
   border-bottom: 1px solid var(--color-border--section);
-  background-color: var(--color-white);
+  background-color: var(--color-surface);
 }
 
 .greyBlue {
