--- a/packages/components/src/Switch/Switch.css
+++ b/packages/components/src/Switch/Switch.css
@@ -1,5 +1,5 @@
 :root {
-  --switch--pipSize: calc(var(--space-base) * 1.875); /* equivalent to 30px */
+  --switch--pipSize: calc(var(--space-base) * 1.875);
   --switch--labelWidth: calc(var(--switch--pipSize) * 1.3);
   --switch--borderOffset: calc(var(--border-base) * 2);
 }
