--- a/packages/components/src/Switch/Switch.css
+++ b/packages/components/src/Switch/Switch.css
@@ -1,5 +1,5 @@
 :root {
-  --switch--pipSize: 30px;
+  --switch--pipSize: calc(var(--space-base) * 1.875);
   --switch--labelWidth: calc(var(--switch--pipSize) * 1.3);
   --switch--borderOffset: calc(var(--border-base) * 2);
 }
@@ -14,23 +14,23 @@
   display: inline-flex;
   width: calc(var(--switch--labelWidth) + var(--switch--pipSize));
   padding: 0;
-  border: var(--border-base) solid var(--color-grey--lighter);
+  border: var(--border-base) solid var(--color-border);
   border-radius: var(--switch--pipSize);
   overflow: hidden;
   line-height: normal;
-  background-color: var(--color-grey--lightest);
+  background-color: var(--color-surface--background);
   cursor: pointer;
   appearance: none;
 }
 
 .track:focus {
-  box-shadow: 0 0 4px 1px var(--color-yellow--light);
+  box-shadow: var(--shadow-focus);
   outline: none;
 }
 
 .isChecked {
-  border-color: var(--color-green);
-  background-color: var(--color-green);
+  border-color: var(--color-interactive);
+  background-color: var(--color-interactive);
 }
 
 .toggle {
@@ -68,9 +68,9 @@
   flex: 0 0 auto;
   width: var(--switch--pipSize);
   height: var(--switch--pipSize);
-  border: var(--border-base) solid var(--color-grey);
-  border-radius: var(--switch--pipSize);
-  background-color: var(--color-white);
+  border: var(--border-base) solid var(--color-border);
+  border-radius: var(--radius-circle);
+  background-color: var(--color-surface);
 }
 
 .isChecked .pip {
@@ -78,11 +78,11 @@
 }
 
 .disabled {
-  border-color: var(--color-grey--lighter);
-  background-color: var(--color-grey--lightest);
+  border-color: var(--color-disabled--secondary);
+  background-color: var(--color-surface--background);
   cursor: not-allowed;
 }
 
 .disabled .pip {
-  border-color: var(--color-grey--lighter);
+  border-color: var(--color-disabled--secondary);
 }
