fixup focus state
- make it match our other focus states

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -41,7 +41,8 @@
 
 .button:focus,
 a.button:focus {
-  outline-color: var(--color-focus);
+  box-shadow: var(--shadow-focus);
+  outline: none;
 }
 
 /* Variation */
