add focus styling to active state

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -40,7 +40,9 @@
 }
 
 .button:focus,
-a.button:focus {
+a.button:focus,
+.button:active,
+a.button:active {
   box-shadow: var(--shadow-focus);
   outline: none;
 }
