--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -1,5 +1,10 @@
 :root {
+  --button--color-variation: var(--color-interactive);
+  --button--color-variation--hover: var(--color-interactive--hover);
+  --button--color-surface: var(--color-surface);
   --button--color-surface--hover: var(--color-surface--background);
+  --button--color-primaryLabel: var(--color-white);
+
   --button--duration-loading: 2s;
 }
 
@@ -8,14 +13,15 @@
   min-height: calc(var(--base-unit) * 2.25);
   box-sizing: border-box;
   margin: 0;
-  border: var(--border-base) solid transparent;
+  border: var(--border-base) solid var(--button--color-variation);
   border-radius: var(--radius-base);
-  color: transparent;
+  color: var(--button--color-variation);
+  fill: var(--button--color-variation);
   -webkit-font-smoothing: antialiased;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
-  background-color: transparent;
+  background-color: var(--button--color-surface);
   cursor: pointer;
   transition: all var(--timing-base);
   appearance: none;
@@ -23,20 +29,17 @@
   justify-content: center;
 }
 
-.buttonLabel {
+.button * {
   color: inherit;
-  font-family: var(--typography--fontFamily-display);
-  font-size: var(--typography--fontSize-small);
-  font-weight: 800;
-  text-transform: uppercase;
+  fill: inherit;
 }
 
-.small .buttonLabel {
-  font-size: var(--typography--fontSize-smaller);
-}
-
-.large .buttonLabel {
-  font-size: var(--typography--fontSize-base);
+.button:hover,
+a.button:hover {
+  border-color: var(--button--color-variation--hover);
+  color: var(--button--color-variation--hover);
+  fill: var(--button--color-variation--hover);
+  background-color: var(--button--color-surface--hover);
 }
 
 .button:focus,
@@ -44,103 +47,49 @@ a.button:focus,
 .button:active,
 a.button:active {
   box-shadow: var(--shadow-focus);
+  border-color: var(--button--color-variation--hover);
   outline: none;
+  color: var(--button--color-variation--hover);
+  fill: var(--button--color-variation--hover);
+  background-color: var(--button--color-surface--hover);
 }
 
 /* Variation */
 
-.work {
-  border-color: var(--color-interactive);
-  color: var(--color-interactive);
-  background-color: var(--color-interactive);
-}
-
-.work:hover,
-a.work:hover,
-.work:focus,
-a.work:focus {
-  border-color: var(--color-interactive--hover);
-  color: var(--color-interactive--hover);
-  background-color: var(--color-interactive--hover);
-}
-
 .learning {
-  border-color: var(--color-informative);
-  color: var(--color-informative);
-  background-color: var(--color-informative);
-}
-
-.learning:hover,
-a.learning:hover,
-.learning:focus,
-a.learning:focus {
-  border-color: var(--color-informative--onSurface);
-  color: var(--color-informative--onSurface);
-  background-color: var(--color-informative--onSurface);
+  --button--color-variation: var(--color-informative);
+  --button--color-variation--hover: var(--color-informative--onSurface);
 }
 
 .destructive {
-  border-color: var(--color-destructive);
-  color: var(--color-destructive);
-  background-color: var(--color-destructive);
-}
-
-.destructive:hover,
-a.destructive:hover,
-.destructive:focus,
-a.destructive:focus {
-  border-color: var(--color-destructive--hover);
-  color: var(--color-destructive--hover);
-  background-color: var(--color-destructive--hover);
+  --button--color-variation: var(--color-destructive);
+  --button--color-variation--hover: var(--color-destructive--hover);
 }
 
 /* Cancel is special because, by default, it's styled as a secondary button */
 
 .cancel {
-  border-color: var(--color-cancel);
-  color: var(--color-cancel);
-  background-color: var(--color-surface);
-}
-
-.cancel:focus,
-.cancel:hover,
-a.cancel:focus,
-a.cancel:hover {
-  border-color: var(--color-cancel--hover);
-  color: var(--color-cancel--hover);
-  background-color: var(--button--color-surface--hover);
+  --button--color-variation: var(--color-cancel);
+  --button--color-variation--hover: var(--color-cancel--hover);
 }
 
 /* Type */
 
-.primary,
+.primary:not(.cancel),
 .primary:not(.cancel):hover,
 .primary:not(.cancel):focus {
-  color: var(--color-surface);
+  color: var(--button--color-primaryLabel);
+  background-color: var(--button--color-variation);
+  fill: var(--button--color-primaryLabel);
 }
 
-.primary.cancel {
-  color: var(--color-cancel);
-}
-
-.primary.disabled {
-  color: var(--color-disabled);
-}
-
-.secondary {
-  background-color: var(--color-surface);
-}
-
-.secondary:hover,
-.secondary:focus,
-a.secondary:hover,
-a.secondary:focus {
-  background-color: var(--button--color-surface--hover);
+.primary:not(.cancel):hover,
+.primary:not(.cancel):focus {
+  background-color: var(--button--color-variation--hover);
 }
 
 .tertiary {
-  border-color: var(--color-surface);
-  background-color: var(--color-surface);
+  border-color: transparent;
 }
 
 .tertiary:hover,
@@ -148,17 +97,19 @@ a.secondary:focus {
 a.tertiary:hover,
 a.tertiary:focus {
   border-color: transparent;
-  background-color: var(--color-grey--lightest);
 }
 
 /* Disabled */
 
-.disabled,
-.disabled:hover {
+.button.disabled,
+a.button.disabled,
+.button.disabled:hover,
+a.button.disabled:hover {
   border-color: var(--color-disabled--secondary);
   color: var(--color-disabled);
   user-select: none;
   background-color: var(--color-disabled--secondary);
+  fill: var(--color-disabled);
   pointer-events: none;
   cursor: not-allowed;
 }
@@ -181,52 +132,6 @@ a.tertiary:focus {
 }
 
 /* Icon */
-
-.button svg path {
-  transition: fill var(--timing-base);
-}
-
-.work svg path {
-  fill: var(--color-interactive);
-}
-
-.destructive svg path {
-  fill: var(--color-destructive);
-}
-
-.learning svg path {
-  fill: var(--color-informative);
-}
-
-.cancel svg path {
-  fill: var(--color-cancel);
-}
-
-.work:hover svg path,
-.work:focus svg path {
-  fill: var(--color-interactive--hover);
-}
-
-.destructive:hover svg path,
-.destructive:focus svg path {
-  fill: var(--color-destructive--hover);
-}
-
-.learning:hover svg path,
-.learning:focus svg path {
-  fill: var(--color-informative--onSurface);
-}
-
-.cancel:hover svg path,
-.cancel:focus svg path {
-  fill: var(--color-cancel--hover);
-}
-
-.primary:not(.cancel) svg path,
-.primary:not(.cancel):hover svg path,
-.primary:not(.cancel):focus svg path {
-  fill: var(--color-surface);
-}
 
 .onlyIcon {
   width: calc(var(--base-unit) * 2.25);
