--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -35,7 +35,11 @@
 }
 
 .button:hover,
-a.button:hover {
+a.button:hover,
+.button:focus,
+a.button:focus,
+.button:active,
+a.button:active {
   border-color: var(--button--color-variation--hover);
   color: var(--button--color-variation--hover);
   fill: var(--button--color-variation--hover);
@@ -47,11 +51,7 @@ a.button:focus,
 .button:active,
 a.button:active {
   box-shadow: var(--shadow-focus);
-  border-color: var(--button--color-variation--hover);
   outline: none;
-  color: var(--button--color-variation--hover);
-  fill: var(--button--color-variation--hover);
-  background-color: var(--button--color-surface--hover);
 }
 
 /* Variation */
