--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -1,20 +1,9 @@
 :root {
-  --button--color-work: var(--color-green);
-  --button--color-work--hover: var(--color-green--dark);
-
-  --button--color-learning: var(--color-lightBlue);
-  --button--color-learning--hover: var(--color-lightBlue--dark);
-
-  --button--color-destructive: var(--color-red);
-  --button--color-destructive--hover: var(--color-red--dark);
-
-  --button--color-cancel: var(--color-greyBlue);
-  --button--color-cancel--hover: var(--color-grey--lightest);
-
-  --button--bg-color-cancel: var(--color-white);
-  --button--color-disabled: var(--color-grey--lighter);
-  --button--color-secondary: var(--color-white);
-  --button--color-tertiary: var(--color-white);
+  --button--color-variation: var(--color-interactive);
+  --button--color-variation--hover: var(--color-interactive--hover);
+  --button--color-surface: var(--color-surface);
+  --button--color-surface--hover: var(--color-surface--background);
+  --button--color-primaryLabel: var(--color-white);
 
   --button--duration-loading: 2s;
 }
@@ -24,14 +13,15 @@
   min-height: calc(var(--base-unit) * 2.25);
   box-sizing: border-box;
   margin: 0;
-  border: 1px solid transparent;
+  border: var(--border-base) solid var(--button--color-variation);
   border-radius: var(--radius-base);
-  color: transparent;
+  color: var(--button--color-variation);
+  fill: var(--button--color-variation);
   -webkit-font-smoothing: antialiased;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
-  background-color: transparent;
+  background-color: var(--button--color-surface);
   cursor: pointer;
   transition: all var(--timing-base);
   appearance: none;
@@ -39,89 +29,76 @@
   justify-content: center;
 }
 
+.button * {
+  color: inherit;
+  fill: inherit;
+}
+
+.button:hover,
+a.button:hover,
 .button:focus,
-a.button:focus {
-  outline-color: var(--color-focus);
+a.button:focus,
+.button:active,
+a.button:active {
+  border-color: var(--button--color-variation--hover);
+  color: var(--button--color-variation--hover);
+  fill: var(--button--color-variation--hover);
+  background-color: var(--button--color-surface--hover);
+}
+
+.button:focus,
+a.button:focus,
+.button:active,
+a.button:active {
+  box-shadow: var(--shadow-focus);
+  outline: none;
 }
 
 /* Variation */
 
 .work {
-  border-color: var(--button--color-work);
-  color: var(--button--color-work);
-  background-color: var(--button--color-work);
-}
-
-.work:hover,
-a.work:hover,
-.work:focus,
-a.work:focus {
-  border-color: var(--button--color-work--hover);
-  background-color: var(--button--color-work--hover);
+  --button--color-variation: var(--color-interactive);
+  --button--color-variation--hover: var(--color-interactive--hover);
 }
 
 .learning {
-  border-color: var(--button--color-learning);
-  background-color: var(--button--color-learning);
-}
-
-.learning:hover,
-a.learning:hover,
-.learning:focus,
-a.learning:focus {
-  border-color: var(--button--color-learning--hover);
-  background-color: var(--button--color-learning--hover);
+  --button--color-variation: var(--color-informative);
+  --button--color-variation--hover: var(--color-informative--onSurface);
 }
 
 .destructive {
-  border-color: var(--button--color-destructive);
-  background-color: var(--button--color-destructive);
-}
-
-.destructive:hover,
-a.destructive:hover,
-.destructive:focus,
-a.destructive:focus {
-  border-color: var(--button--color-destructive--hover);
-  background-color: var(--button--color-destructive--hover);
+  --button--color-variation: var(--color-destructive);
+  --button--color-variation--hover: var(--color-destructive--hover);
 }
 
 /* Cancel is special because, by default, it's styled as a secondary button */
 
 .cancel {
-  border-color: var(--button--color-cancel);
-  background-color: var(--button--bg-color-cancel);
-}
-
-.cancel:focus,
-.cancel:hover,
-a.cancel:focus,
-a.cancel:hover {
-  background-color: var(--button--color-cancel--hover);
-  filter: brightness(80%);
+  --button--color-variation: var(--color-cancel);
+  --button--color-variation--hover: var(--color-cancel--hover);
 }
 
 /* Type */
 
-.primary {
-  color: var(--color-white);
+.primary:not(.cancel),
+.primary:not(.cancel):hover,
+.primary:not(.cancel):focus {
+  color: var(--button--color-primaryLabel);
+  background-color: var(--button--color-variation);
+  fill: var(--button--color-primaryLabel);
+}
+
+.primary:not(.cancel):hover,
+.primary:not(.cancel):focus {
+  background-color: var(--button--color-variation--hover);
 }
 
 .secondary {
-  background-color: var(--button--color-secondary);
-}
-
-.secondary:hover,
-.secondary:focus,
-a.secondary:hover,
-a.secondary:focus {
-  background-color: var(--button--color-secondary);
-  filter: brightness(80%);
+  border-color: var(--button--color-variation);
 }
 
 .tertiary {
-  border-color: var(--button--color-tertiary);
-  background-color: var(--button--color-tertiary);
+  border-color: transparent;
 }
 
 .tertiary:hover,
@@ -129,16 +106,19 @@ a.secondary:focus {
 a.tertiary:hover,
 a.tertiary:focus {
   border-color: transparent;
-  background-color: var(--color-grey--lightest);
 }
 
 /* Disabled */
 
-.disabled,
-.disabled:hover {
-  border-color: var(--button--color-disabled);
+.button.disabled,
+a.button.disabled,
+.button.disabled:hover,
+a.button.disabled:hover {
+  border-color: var(--color-disabled--secondary);
+  color: var(--color-disabled);
   user-select: none;
-  background-color: var(--button--color-disabled);
+  background-color: var(--color-disabled--secondary);
+  fill: var(--color-disabled);
   pointer-events: none;
   cursor: not-allowed;
 }
