--- a/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
@@ -1,16 +1,52 @@
 .layout {
-  display: flex;
   min-height: 100vh;
+
+  @media (--wide-screens) {
+    display: flex;
+  }
+}
+
+.menu {
+  position: fixed;
+  top: var(--space-large);
+  z-index: 9999;
+  margin-left: var(--space-large);
+  transition: left 300ms;
+
+  @media (--wide-screens) {
+    display: none;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 8888;
+  width: 100%;
+  height: 100vh;
+  background: var(--color-surface);
+
+  @media (--wide-screens) {
+    display: none;
+  }
 }
 
 .sidebar {
+  position: absolute;
+  z-index: 9999;
   flex: 0 0 auto;
   min-height: 100vh;
+  transition: left 300ms;
+
+  @media (--wide-screens) {
+    position: static;
+  }
 }
 
 .content {
-  padding: var(--space-larger) 0 var(--space-extravagant);
   flex: 1;
+  padding: var(--space-extravagant) 0 var(--space-extravagant);
 }
 
 .container {
