be clear how important this icon fill is to us

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -31,7 +31,7 @@
 
 .button * {
   color: inherit;
-  fill: inherit;
+  fill: inherit !important; /* required to over-ride very specific fill from <Icon> */
 }
 
 .button:hover,
