closes the overlay with a semantic color

--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -50,6 +50,8 @@
   --color-border: var(--color-grey--lighter);
   --color-border--section: var(--color-blue);
 
+  --color-overlay: rgba(var(--color--greyBlue--rgb), 0.8);
+
   /* Brand */
   --color-brand: var(--color-green);
   --color-brand--highlight: rgb(160, 215, 42);
@@ -106,7 +108,8 @@
   --color-grey--lightest: rgb(244, 244, 244);
   --color-grey--dark: rgb(118, 118, 118);
 
-  --color-greyBlue: rgb(101, 120, 132);
+  --color--greyBlue--rgb: 101, 120, 132;
+  --color-greyBlue: rgb(var(--color--greyBlue--rgb));
   --color-greyBlue--light: rgb(147, 161, 169);
   --color-greyBlue--lighter: rgb(193, 201, 206);
   --color-greyBlue--lightest: rgb(232, 235, 237);
