--- a/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
@@ -25,7 +25,7 @@
   z-index: 8888;
   width: 100%;
   height: 100vh;
-  background: var(--color-surface);
+  background: var(--color-overlay);
 
   @media (--wide-screens) {
     display: none;
