--- a/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
@@ -1,31 +1,6 @@
 .list {
-  list-style: none;
-}
-
-.label {
-  color: pink;
-  background: none;
-  appearance: none;
-}
-
-.level2 .label {
-  color: red;
-}
-
-.level2 .groupLabel {
-  color: green;
-}
-
-.level2 .pageLabel {
-  color: skyblue;
-}
-/* .page {} */
-
-/* .list,
-.list ul {
   margin: 0;
-  padding: var(--space-base);
-  color: var(--color-red);
+  padding: var(--space-base) var(--space-large);
   list-style: none;
 }
 
@@ -38,65 +13,82 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  color: var(--color-greyBlue--light);
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  background: none;
-  appearance: none;
-}
-
-.pageLink {
-  color: var(--color-greyBlue--light);
-  text-decoration: none;
-}
-
-.groupLabel {
-  text-decoration: underline;
-  appearance: none;
-}
-
-/* .list a,
-.list button {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  padding: 0;
   border: none;
-  color: var(--color-blue--lightest);
+  color: var(--color-greyBlue--lighter);
   font-family: "Poppins", sans-serif;
-  font-size: var(--typography--fontSize-base);
+  font-size: var(--base-unit);
   font-weight: 700;
   text-decoration: none;
   text-transform: uppercase;
   background: none;
+  cursor: pointer;
+  transition: color var(--timing-base);
   appearance: none;
-} */
-
-/* .group {
-  color: green;
 }
 
-.page {
-  color: green;
+.label:hover,
+.active {
+  color: var(--color-white);
 }
 
-.group .group {
-  color: yellow;
+/**
+ * Level 2 Navigation
+**/
+.level2.list {
+  margin: var(--space-small) 0 0;
+  padding: 0;
 }
 
-.group .page {
-  color: yellowgreen;
+.level2 .item {
+  margin: 0;
 }
 
-.group .page a {
-  color: palevioletred;
+.level2 .groupLabel {
+  margin: var(--space-base) 0 var(--space-small);
+  border-bottom: var(--border-base) solid var(--color-greyBlue--lighter);
+  color: var(--color-greyBlue--lighter);
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: calc(var(--base-unit) * 0.875);
+  font-weight: 700;
+  letter-spacing: calc(var(--space-minuscule) / 2);
+  cursor: default;
 }
 
-.group .group .page {
-  color: red;
+.level2 .pageLabel {
+  display: block;
+  padding: var(--space-smaller) 0;
+  color: var(--color-greyBlue--light);
+  font-size: calc(var(--base-unit) * 0.875);
+  text-transform: none;
 }
 
-.group .group .page a {
-  color: papayawhip;
-} */
+.level2 .pageLabel::before {
+  content: "";
+  display: inline-block;
+  width: var(--space-small);
+  height: var(--space-small);
+  margin-right: var(--space-small);
+  border: var(--border-base) solid var(--color-greyBlue--light);
+  border-radius: var(--radius-circle);
+  background: none;
+  transition: background var(--timing-base);
+}
+
+.level2 .pageLabel.active,
+.level2 .pageLabel:hover {
+  color: var(--color-white);
+}
+
+.level2 .pageLabel.active::before {
+  border-color: var(--color-green);
+  background: var(--color-green);
+}
+
+/**
+ * Level 3 Navigation
+*/
+
+.level3.list {
+  padding: 0;
+}
