feat: Allow Multi Level Menu in Docz (#549)
* add a custom hook to get better data

* has menu in a working state

* adds new menu structure

* remove old Nav components

* update the styling on Nav

* Fix side scrolling on body

* Organize actions so they can live inside the TOC

* Add TOC component

* Move inactive triggers below overlay

* Hide TOC when clicking link

* scrolls sidebar to active item

* adjust z-index and breakpoints

* Bring framer-motion version inline

* ⎸

* include responsiveBreakpoints to design

* flip the nodes

* make design path relative

* Remove mdx changes

* Adds sorting to the navigation

* remove console log

* fix gatsby build

* adds new wrapper

Co-authored-by: Sean Healy <s@xib.ca>

--- a/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
@@ -9,7 +9,7 @@
 .menu {
   position: fixed;
   top: var(--space-large);
-  z-index: 9999;
+  z-index: var(--sidebar-z-index);
   margin-left: var(--space-large);
   transition: left 300ms;
 
@@ -18,11 +18,15 @@
   }
 }
 
+.menu.open {
+  z-index: calc(var(--sidebar-z-index) + 2);
+}
+
 .overlay {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 8888;
+  z-index: calc(var(--sidebar-z-index) + 1);
   width: 100%;
   height: 100vh;
   background: var(--color-overlay);
@@ -34,7 +38,7 @@
 
 .sidebar {
   position: absolute;
-  z-index: 9999;
+  z-index: calc(var(--sidebar-z-index) + 2);
   flex: 0 0 auto;
   min-height: 100vh;
   transition: left 300ms;
