--- a/packages/docz-tools/src/gatsby-theme-docz/index.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/index.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap");
 
+:root {
+  --sidebar-z-index: 500;
+}
+
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 html *,
@@ -11,7 +16,9 @@ html *::after {
 }
 
 body {
+  position: relative;
   margin: 0;
+  overflow-x: hidden;
   color: var(--color-greyBlue--dark);
   font-family: var(--typography--fontFamily-normal);
   font-size: var(--typography--fontSize-large);
