--- a/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
@@ -56,7 +56,9 @@
 }
 
 .level2 .pageLabel {
-  display: block;
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
   padding: var(--space-smaller) 0;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: normal;
@@ -66,6 +68,7 @@
 .level2 .pageLabel::before {
   content: "";
   display: inline-block;
+  flex-shrink: 0;
   width: var(--space-small);
   height: var(--space-small);
   margin-right: var(--space-base);
