make tests pass

--- a/packages/components/src/FormField/FormFieldStyles.css
+++ b/packages/components/src/FormField/FormFieldStyles.css
@@ -188,7 +188,7 @@
   top: var(--space-small);
 }
 
-.select .input {
+.select:not(.small) .input {
   padding-top: var(--space-small);
   padding-bottom: 0;
 }
