handles the icon for prefix and postfix

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -216,3 +216,16 @@
   z-index: calc(var(--field-base-elevation) - 1);
   transform: translateY(-50%);
 }
+
+/**
+ * Affix Icon
+ **/
+.affixIcon {
+  align-self: center;
+  padding: 0 0 0 var(--space-small);
+  /* background: red; */
+}
+
+.affixIcon.suffix {
+  padding: 0 var(--space-small) 0 0;
+}
